<?xml version="1.0" encoding="utf-8"?>
<!-- 
 *  OpenLogbook - App logging driven distances and times
 *  Copyright (C) 2012 Michael Lück
 *
 *  This program is free software; you can redistribute it and/or
 *  modify it under the terms of the GNU General Public License
 *  as published by the Free Software Foundation; either version 2
 *  of the License, or (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with this program; if not, write to the Free Software
 *  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
 -->
<resources>

    <string name="hello">Welcome to OpenLogbook</string>
    <string name="app_name">OpenLogbook</string>
    <string name="Commuter">Commuter</string>
    <string name="Fieldstaff">Fielstaff</string>
	<string name="CommitModeSelection">Select</string>
	<string name="StartGPS">Start GPS</string>
	<string name="StopGPS">Stop GPS</string>
	<string name="SaveLog">Save displayed Log</string>
	<string name="Driver">Driver</string>
	<string name="Drivers">Drivers</string>
	<string name="Distance">Distance</string>
	<string name="Metric">km</string>
	<string name="Car">Car</string>
	<string name="Cars">Cars</string>
	<string name="starttime">Start</string>
	<string name="stoptime">Stop</string>
	<string name="licensePlate">Lisence plate</string>
	<string name="driverName">Name</string>
	<string name="btnAddDriver">Add</string>
	<string name="btnAddCar">Add</string>
	<string name="avaiableCars">Avaiable cars</string>
	<string name="btnFinishedText">Finished</string>
	<string name="ErrorAddingCar">Unable to create car</string>
	<string name="InternalError">Internal error occured.</string>
	<string name="LicensePlateEmpty">Value for license plate may not be empty</string>
	<string name="OneCarMinimum">There must be at least one car</string>
	<string name="availableDrivers">Avaiable drivers</string>
	<string name="name">Name</string>
	<string name="ErrorAddingDriver">Unable to create the driver</string>
	<string name="DriverNameEmpty">The name of the driver must not be empty</string>
	<string name="OneDriverMinimum">There must be at least one driver</string>
	<string name="Modus">Mode</string>
	<string name="Export">Export</string>
	<string name="BluetoothDisabled">Please enable Bluetooth</string>
	<string name="EnableBluetooth">Use Bluetooth</string>
	<string name="PreferencesMode">Mode</string>
	<string name="PreferencesBluetooth">Bluetooth Settings</string>
	<string name="AddDevice">Add Trigger Device</string>
	<string name="selectTrigger">Select a trigger device</string>
	<string name="selectCar">Select a car</string>
	<string name="FinishAddTrigger">Finish</string>
	<string name="NoCar">No Car</string>
</resources>