<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:binding="http://www.gueei.com/android-binding/"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/lblSelectTrigger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectTrigger" />

    <Spinner
        android:id="@+id/avaiableTriggers"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        binding:itemSource="devices"
        binding:itemTemplate="@layout/spinner_item"
        binding:onItemSelected="deviceSelected"/>

    <TextView
        android:id="@+id/lblSelectCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectCar" />

    <Spinner
        android:id="@+id/availableCars"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        binding:itemSource="cars"
        binding:itemTemplate="@layout/spinner_item"
        binding:onItemSelected="carSelected"/>
    
    <Button
        android:id="@+id/btnFinishAddTrigger"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/FinishAddTrigger"
        binding:onClick="finish"
        />

</LinearLayout>