<?xml version="1.0" encoding="utf-8"?>
<!--
 *  OpenLogbook - App logging driven distances and times
 *  Copyright (C) 2012 Michael Lück
 *
 *  This program is free software; you can redistribute it and/or
 *  modify it under the terms of the GNU General Public License
 *  as published by the Free Software Foundation; either version 2
 *  of the License, or (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with this program; if not, write to the Free Software
 *  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:binding="http://www.gueei.com/android-binding/"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

     <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dip"
            android:layout_marginTop="4dip"
            android:text="@string/PreferencesMode" />
     
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dip"
        android:background="@drawable/border"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/radioGroupMode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioCommuter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Commuter" 
                binding:onClick="modeClicked"
                binding:checked="isCommuter"
                />

            <RadioButton
                android:id="@+id/radioFieldstaff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Fieldstaff" 
                binding:onClick="modeClicked"
                binding:checked="isFieldstaff"
                />
        </RadioGroup>
    </LinearLayout>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dip"
            android:layout_marginTop="4dip"
            android:text="@string/PreferencesBluetooth" />
    
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dip"
        android:layout_weight="1000"
        android:background="@drawable/border"
        android:orientation="vertical" >
        
        <!--
		starts the service if not already started. 
		If the service is running on opening this view the checkbox should be checked.
		Otherwise the checkbox should not be checked.
        -->
        <CheckBox
            android:id="@+id/checkEnableBluetooth"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/EnableBluetooth" 
            binding:checked="isBluetoothServiceRunning"
            binding:onClick="toggleBluetooth"/>

        <ListView
            android:id="@+id/triggerDevices"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1000"
            android:layout_marginLeft="15dip"
            binding:itemSource="triggerDevices"
            binding:itemTemplate="@layout/triggerdevice" />
        
        <Button
            android:id="@+id/btnAddDevice"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="100dip"
            android:text="@string/AddDevice"
            binding:onClick="addDevice" />
        
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

	</LinearLayout>
	
     <Button
        android:id="@+id/btnCommitMode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/CommitModeSelection" 
        binding:onClick="finish"/>
</LinearLayout>